--- a/styles.css
+++ b/styles.css
@@ -114,9 +114,9 @@ header {
 }
 
 .product-info .price {
-    font-size: 14px; /* Reduced font size */
+    font-size: 18px; /* Reduced font size */
     color: #e67e22; /* Color for price */
-    margin: 5px 0; /* Space above price */
+    margin: 5px 0 10px; /* Space above price */
 }
 
 .buy-button {
