--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,17 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
+    background: #252525;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 header {
@@ -31,23 +33,74 @@ header {
     width: 50px; /* Adjust size */
 }
 
+.container {
+    position: relative;
+    width: 300px;
+    height: 100px;
+}
+
 .search {
-    display: flex;
-    align-items: center;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background: crimson;
+    border-radius: 50%;
+    transition: all 1s;
+    z-index: 4;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
 }
 
-.search input {
-    padding: 10px;
-    border: none;
-    border-radius: 25px;
-    width: 250px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s;
-}
-
-.search input:focus {
+input {
+    font-family: 'Inconsolata', monospace;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
     outline: none;
-    box-shadow: 0 0 5px #d35400; /* Darker orange */
+    border: none;
+    background: crimson;
+    color: white;
+    text-shadow: 0 0 10px crimson;
+    padding: 0 80px 0 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 25px 0 crimson,
+                0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    transition: all 1s;
+    opacity: 0;
+    z-index: 5;
+    font-weight: bolder;
+    letter-spacing: 0.1em;
+}
+
+input:hover {
+    cursor: pointer;
+}
+
+input:focus {
+    width: 300px;
+    opacity: 1;
+    cursor: text;
+}
+
+input::placeholder {
+    color: white;
+    opacity: 0.5;
+    font-weight: bolder;
+}
+
+input:focus ~ .search {
+    right: -250px;
+    background: #151515;
+    z-index: 6;
 }
 
 .screenshot {
