--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,12 @@
 }
 
 body {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(45deg, black, #0f0f2b);
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
 }
 
 .navbar {
@@ -19,21 +23,88 @@ body {
 
 .navbar h1 {
     font-family: 'Evevent', sans-serif;
-    font-size: 36px; /* Increased font size */
+    font-size: 36px;
     color: white;
 }
 
-.searchbar {
-    padding: 10px;
-    border: 1px solid orange;
-    border-radius: 0; /* No rounded corners */
-    outline: none;
-    font-size: 16px;
-    transition: border-color 0.3s;
+form {
+    position: relative;
+    top: 0;
+    transition: all 1s;
 }
 
-.searchbar:focus {
-    border-color: darkorange; /* Highlight border on focus */
+input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 0;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+    background: white;
+}
+
+.fa {
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 4px;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+form:focus-within,
+form:hover,
+form:valid {
+    width: 200px;
+    cursor: pointer;
+}
+
+form:hover input,
+form:focus-within input,
+form:valid input {
+    width: 100%;
+}
+
+form:hover .fa,
+form:focus-within .fa,
+form:valid .fa {
+    background: #07051a;
+    color: white;
+}
+
+button {
+    display: none;
+    position: absolute;
+    top: 70px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    font-size: 20px;
+    color: white;
+    padding: 4px;
+    min-height: max-content;
+    background: transparent;
+    outline: 0;
+    border: 1px solid #303030;
+    border-radius: 4px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+}
+
+form:valid button {
+    display: block;
 }
 
 .products-container {
@@ -60,7 +131,7 @@ body {
 }
 
 .product-icon {
-    width: 80px; /* Icon size */
+    width: 80px;
     height: auto;
     margin-bottom: 10px;
 }
