--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ body {
 
 form {
     position: relative;
-    top: 0;
     transition: all 1s;
 }
 
@@ -46,6 +45,7 @@ input {
     border-radius: 20px;
     padding: 0 20px;
     background: white;
+    transition: width 0.5s ease; /* Animation for width */
 }
 
 .fa {
@@ -60,20 +60,19 @@ input {
     color: #07051a;
     text-align: center;
     font-size: 1.2em;
-    transition: all 1s;
+    transition: all 0.5s ease; /* Animation for icon */
 }
 
 form:focus-within,
 form:hover,
 form:valid {
-    width: 200px;
     cursor: pointer;
 }
 
 form:hover input,
 form:focus-within input,
 form:valid input {
-    width: 100%;
+    width: 200px; /* Expanded width on focus */
 }
 
 form:hover .fa,
@@ -87,7 +86,6 @@ button {
     display: none;
     position: absolute;
     top: 70px;
-    bottom: 0;
     left: 0;
     right: 0;
     font-size: 20px;
@@ -104,7 +102,7 @@ button {
 }
 
 form:valid button {
-    display: block;
+    display: block; /* Show button when input is valid */
 }
 
 .products-container {
