--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,11 @@ body {
 }
 
 .footer {
-    margin-top: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-top: 0; /* Remove margin if fixed */
 }
 
 .black-bar {
