--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 .searchbar {
     padding: 10px;
     border: 1px solid orange;
-    border-radius: 0; /* No rounded corners */
+    border-radius: 50px; /* Rounded corners */
     outline: none;
     font-size: 16px;
     transition: border-color 0.3s;
@@ -35,6 +35,7 @@ body {
 .searchbar:focus {
     border-color: darkorange; /* Highlight border on focus */
 }
+
 
 .products-container {
     display: flex;
