--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .navbar h1 {
-    font-family: 'Evevent', sans-serif; /* Apply the custom font */
+    font-family: 'Font1', sans-serif; /* Apply the custom font */
     font-size: 36px; /* Increased font size */
     color: white;
 }
