--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 
 .product-box {
     background-color: white;
-    border: 2px solid orange;
+    border: 1px solid gray;
     border-radius: 10px;
     padding: 20px;
     margin: 5px;
