--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ body {
     margin-top: 0; /* Remove margin if fixed */
 }
 
-.black-bar {
-    background-color: black;
+.orange-bar {
+    background-color: orange;
     color: white;
     text-align: center;
     padding: 50px;
