--- a/styles.css
+++ b/styles.css
@@ -109,5 +109,6 @@ body {
     font-family: 'Font1', sans-serif; /* Use your custom font for prices */
     font-weight: bold;
     color: #333;
-    margin-left: 30px; /* Adjust spacing as needed */
+    margin-left: 20px; /* Adjust spacing as needed */
+    font-size: 32.4px; /* 10% smaller than the title (36px - 10%) */
 }
