--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,8 @@ body {
 }
 
 .balance {
-    font-family: 'Font1', sans-serif; /* Use your custom font for prices */
+    font-family: 'Font1', sans-serif;
+    background-color: white; /* Use your custom font for prices */
     font-weight: bold;
     color: #333;
     margin-left: 20px; /* Adjust spacing as needed */
